--- a/css/index.style.css
+++ b/css/index.style.css
@@ -1,15 +1,15 @@
 @font-face {
     font-family: nazanin;
-    src: url(fonts/Nazanin.eot#?)format('eot'),
-        url(fonts/Nazanin.ttf)format('truetype'),
-        url(fonts/Nazanin.woff)format('woff');
+    src: url(../fonts/Nazanin.eot#?)format('eot'),
+        url(../fonts/Nazanin.ttf)format('truetype'),
+        url(../fonts/Nazanin.woff)format('woff');
 }
 
 @font-face {
     font-family: yekan;
-    src: url(fonts/Yekan.eot#?)format('eot'),
-        url(fonts/Yekan.ttf)format('truetype'),
-        url(fonts/Yekan.woff2)format('woff2');
+    src: url(../fonts/Yekan.eot#?)format('eot'),
+        url(../fonts/Yekan.ttf)format('truetype'),
+        url(../fonts/Yekan.woff2)format('woff2');
 }
 
 * {
